# src/api/openapi-openai.json
@@ -168,100 +168,6 @@
           }
         }
       }
-    },
-    "/gtp-email": {
-      "post": {
-        "summary": "Create and email with OpenAi",
-        "operationId": "createEmail",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "messages": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "role": { "type": "string" },
-                        "content": { "type": "string" }
-                      },
-                      "required": ["role", "content"]
-                    }
-                  }
-                },
-                "required": ["messages"]
-              }
-            }
-          }
-        },
-        "tags": ["openai"],
-        "responses": {
-          "200": {
-            "description": "OpenAI responded successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "id": { "type": "string" },
-                    "choices": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "message": {
-                            "type": "object",
-                            "properties": {
-                              "role": { "type": "string" },
-                              "content": { "type": "string" }
-                            },
-                            "required": ["role", "content"]
-                          }
-                        },
-                        "required": ["message"]
-                      }
-                    }
-                  },
-                  "required": ["id", "choices"]
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid request data",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string"
-                    }
-                  },
-                  "required": ["message"]
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": { "type": "string" }
-                  },
-                  "required": ["message"]
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "servers": [
